# energymon

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  LICENSE-MIT  Makefile  README.md  RELEASES.md  appveyor.yml  pkgconfig.in
.github/workflows/: ci.yml
cmake/: FindIntelPowerGadget.cmake  FindSensors.cmake
common/: energymon-get.c.in  energymon-get.h  energymon-get.h.in  energymon-time-util.c  energymon-time-util.h  energymon-util.h
common/ptime/: ptime.c  ptime.h
cray-pm/: CMakeLists.txt  README.md  energymon-cray-pm-accel_energy.c  energymon-cray-pm-accel_energy.h  energymon-cray-pm-common.c  energymon-cray-pm-common.h  energymon-cray-pm-cpu_energy.c  energymon-cray-pm-cpu_energy.h  energymon-cray-pm-energy.c  energymon-cray-pm-energy.h  energymon-cray-pm-memory_energy.c  energymon-cray-pm-memory_energy.h  energymon-cray-pm.c  energymon-cray-pm.h
dummy/: CMakeLists.txt  README.md  em-dummy.c  energymon-dummy.c  energymon-dummy.h
ibmpowernv/: CMakeLists.txt  README.md  energymon-ibmpowernv-power.c  energymon-ibmpowernv-power.h  energymon-ibmpowernv.c  energymon-ibmpowernv.h
inc/: em-default.h  em-dummy.h  em-generic.h  em-msr.h  em-odroid-smart-power.h  em-odroid.h  energymon-default.h  energymon-dummy.h  energymon-msr.h  energymon-odroid-smart-power.h  energymon-odroid.h  energymon-osp.h  energymon-rapl.h  energymon.h
ipg/: CMakeLists.txt  README.md  energymon-ipg.c  energymon-ipg.h
jetson/: CMakeLists.txt  JetsonPowerRails.md  README.md  energymon-jetson.c  energymon-jetson.h  ina3221.c  ina3221.h  ina3221x.c  ina3221x.h  util.c  util.h
msr/: CMakeLists.txt  README.md  em-msr.c  energymon-msr.c  energymon-msr.h
msr/etc/: msr_safe_whitelist
odroid/: CMakeLists.txt  README.md  energymon-odroid-ioctl.c  energymon-odroid-ioctl.h  energymon-odroid.c  energymon-odroid.h
odroid-ioctl/: CMakeLists.txt  README.md  energymon-odroid-ioctl.c  energymon-odroid-ioctl.h
osp/: CMakeLists.txt  README.md  em-osp.c  energymon-osp-polling-shmem-provider.c  energymon-osp-polling.h  energymon-osp.c  energymon-osp.h
osp3/: CMakeLists.txt  README.md  energymon-osp3.c  energymon-osp3.h
pkgconfig/: energymon-dummy.pc  energymon-msr.pc  energymon-odroid.pc  energymon-osp-polling.pc  energymon-osp.pc  energymon-rapl.pc
rapl/: CMakeLists.txt  README.md  em-rapl.c  energymon-rapl.c  energymon-rapl.h
raplcap-msr/: CMakeLists.txt  README.md  energymon-raplcap-msr.c  energymon-raplcap-msr.h
shmem/: CMakeLists.txt  README.md  energymon-shmem-provider.c  energymon-shmem.c  energymon-shmem.h
shmem/example/: energymon-shmem-example.c
shmem/man/: energymon-shmem-provider.1.in
src/: em-dummy.c  em-msr.c  em-odroid-smart-power.c  em-odroid.c  em-osp.c  em-rapl.c  energymon-time-util.c  energymon-time-util.h  energymon-util.c  energymon-util.h  energymon.c
src/app/: energymon-cmd-profile.c  energymon-file-provider.c  energymon-idle-power.c  energymon-info.c  energymon-overhead.c  energymon-power-poller.c  energymon.c
src/ptime/: ptime.c  ptime.h
test/: CMakeLists.txt  interface_test.c  interval_test.c
utils/: CMakeLists.txt  energymon-cmd-profile.c  energymon-file-provider.c  energymon-idle-power.c  energymon-info.c  energymon-overhead.c  energymon-power-poller.c
utils/man/: energymon-cmd-profile.1  energymon-cmd-profile.1.in  energymon-file-provider.1  energymon-file-provider.1.in  energymon-idle-power.1  energymon-idle-power.1.in  energymon-info.1  energymon-info.1.in  energymon-overhead.1  energymon-overhead.1.in  energymon-power-poller.1  energymon-power-poller.1.in
wattsup/: CMakeLists.txt  README.md  energymon-wattsup-shmem-provider.c  energymon-wattsup.c  energymon-wattsup.h  wattsup-driver.h
wattsup/dev/: CMakeLists.txt  wattsup-driver-dev.c
wattsup/libftdi/: CMakeLists.txt  wattsup-driver-libftdi.c
wattsup/libftdi/cmake/: has_ftdi_tcioflush.c
wattsup/libusb/: CMakeLists.txt  wattsup-attach-kernel.c  wattsup-driver-libusb.c  wattsup-libusb-device.txt
zcu102/: CMakeLists.txt  README.md  energymon-zcu102.c  energymon-zcu102.h
